--- a/trees.ipynb
+++ b/trees.ipynb
@@ -2903,7 +2903,7 @@
         "* learning_rate: 0.05\n",
         "* n_estimators: 40 <br>\n",
         "\n",
-        "5-fold cross-validation average AUC a model with these parameters values equals 0.5853284951374265"
+        "5-fold cross-validation average AUC of a model with these parameters values equals 0.5853284951374265"
       ],
       "metadata": {
         "id": "SH7I7PouJXjx"
@@ -3017,7 +3017,14 @@
             "[CV 5/5] END et__max_depth=7, et__max_features=19, et__min_impurity_decrease=0.00999749158180029, et__min_samples_leaf=11, et__n_estimators=97;, score=0.500 total time=  28.1s\n",
             "[CV 1/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  32.6s\n",
             "[CV 2/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  32.7s\n",
-            "[CV 3/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  30.0s\n"
+            "[CV 3/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  30.0s\n",
+            "[CV 4/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  29.3s\n",
+            "[CV 5/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  30.4s\n",
+            "[CV 1/5] END et__max_depth=2, et__max_features=24, et__min_impurity_decrease=0.08324426408004218, et__min_samples_leaf=38, et__n_estimators=395;, score=0.500 total time=  31.2s\n",
+            "[CV 2/5] END et__max_depth=2, et__max_features=24, et__min_impurity_decrease=0.08324426408004218, et__min_samples_leaf=38, et__n_estimators=395;, score=0.500 total time=  32.1s\n",
+            "[CV 3/5] END et__max_depth=2, et__max_features=24, et__min_impurity_decrease=0.08324426408004218, et__min_samples_leaf=38, et__n_estimators=395;, score=0.500 total time=  30.7s\n",
+            "[CV 4/5] END et__max_depth=2, et__max_features=24, et__min_impurity_decrease=0.08324426408004218, et__min_samples_leaf=38, et__n_estimators=395;, score=0.500 total time=  30.7s\n",
+            "[CV 5/5] END et__max_depth=2, et__max_features=24, et__min_impurity_decrease=0.08324426408004218, et__min_samples_leaf=38, et__n_estimators=395;, score=0.500 total time=  28.8s\n"
           ]
         }
       ]
