--- a/trees.ipynb
+++ b/trees.ipynb
@@ -2963,13 +2963,13 @@
         "        ('scaler', StandardScaler(), [*range(0, 19)])],\n",
         "         remainder='passthrough')),\n",
         "    ('imputer', KNNImputer()),\n",
-        "    ('et', ExtraTreesClassifier(random_state=42))\n",
+        "    ('et', ExtraTreesClassifier(random_state=42, n_jobs=-1))\n",
         "])"
       ],
       "metadata": {
         "id": "_XnLpDU8S3ht"
       },
-      "execution_count": 16,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -2984,7 +2984,7 @@
         "}\n",
         "\n",
         "clf = RandomizedSearchCV(pipe, distr, n_iter=40, cv=5, scoring='roc_auc',\n",
-        "                         random_state=42, verbose=3)\n",
+        "                         random_state=42, verbose=2)\n",
         "\n",
         "clf.fit(X_train_dummies, y_train)\n",
         "\n",
@@ -2996,7 +2996,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "81274f06-089a-418c-fbd4-d80c6b30b804"
+        "outputId": "0358fb5e-37b9-47e9-a8d7-b1cb95cc7c89"
       },
       "execution_count": null,
       "outputs": [
@@ -3005,26 +3005,7 @@
           "name": "stdout",
           "text": [
             "Fitting 5 folds for each of 40 candidates, totalling 200 fits\n",
-            "[CV 1/5] END et__max_depth=7, et__max_features=29, et__min_impurity_decrease=0.01834347898661638, et__min_samples_leaf=8, et__n_estimators=710;, score=0.500 total time=  39.0s\n",
-            "[CV 2/5] END et__max_depth=7, et__max_features=29, et__min_impurity_decrease=0.01834347898661638, et__min_samples_leaf=8, et__n_estimators=710;, score=0.500 total time=  36.2s\n",
-            "[CV 3/5] END et__max_depth=7, et__max_features=29, et__min_impurity_decrease=0.01834347898661638, et__min_samples_leaf=8, et__n_estimators=710;, score=0.500 total time=  32.3s\n",
-            "[CV 4/5] END et__max_depth=7, et__max_features=29, et__min_impurity_decrease=0.01834347898661638, et__min_samples_leaf=8, et__n_estimators=710;, score=0.500 total time=  31.4s\n",
-            "[CV 5/5] END et__max_depth=7, et__max_features=29, et__min_impurity_decrease=0.01834347898661638, et__min_samples_leaf=8, et__n_estimators=710;, score=0.500 total time=  32.0s\n",
-            "[CV 1/5] END et__max_depth=7, et__max_features=19, et__min_impurity_decrease=0.00999749158180029, et__min_samples_leaf=11, et__n_estimators=97;, score=0.500 total time=  30.2s\n",
-            "[CV 2/5] END et__max_depth=7, et__max_features=19, et__min_impurity_decrease=0.00999749158180029, et__min_samples_leaf=11, et__n_estimators=97;, score=0.500 total time=  31.6s\n",
-            "[CV 3/5] END et__max_depth=7, et__max_features=19, et__min_impurity_decrease=0.00999749158180029, et__min_samples_leaf=11, et__n_estimators=97;, score=0.500 total time=  28.6s\n",
-            "[CV 4/5] END et__max_depth=7, et__max_features=19, et__min_impurity_decrease=0.00999749158180029, et__min_samples_leaf=11, et__n_estimators=97;, score=0.500 total time=  44.5s\n",
-            "[CV 5/5] END et__max_depth=7, et__max_features=19, et__min_impurity_decrease=0.00999749158180029, et__min_samples_leaf=11, et__n_estimators=97;, score=0.500 total time=  28.1s\n",
-            "[CV 1/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  32.6s\n",
-            "[CV 2/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  32.7s\n",
-            "[CV 3/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  30.0s\n",
-            "[CV 4/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  29.3s\n",
-            "[CV 5/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  30.4s\n",
-            "[CV 1/5] END et__max_depth=2, et__max_features=24, et__min_impurity_decrease=0.08324426408004218, et__min_samples_leaf=38, et__n_estimators=395;, score=0.500 total time=  31.2s\n",
-            "[CV 2/5] END et__max_depth=2, et__max_features=24, et__min_impurity_decrease=0.08324426408004218, et__min_samples_leaf=38, et__n_estimators=395;, score=0.500 total time=  32.1s\n",
-            "[CV 3/5] END et__max_depth=2, et__max_features=24, et__min_impurity_decrease=0.08324426408004218, et__min_samples_leaf=38, et__n_estimators=395;, score=0.500 total time=  30.7s\n",
-            "[CV 4/5] END et__max_depth=2, et__max_features=24, et__min_impurity_decrease=0.08324426408004218, et__min_samples_leaf=38, et__n_estimators=395;, score=0.500 total time=  30.7s\n",
-            "[CV 5/5] END et__max_depth=2, et__max_features=24, et__min_impurity_decrease=0.08324426408004218, et__min_samples_leaf=38, et__n_estimators=395;, score=0.500 total time=  28.8s\n"
+            "[CV] END et__max_depth=7, et__max_features=29, et__min_impurity_decrease=0.01834347898661638, et__min_samples_leaf=8, et__n_estimators=710; total time=  36.6s\n"
           ]
         }
       ]
