--- a/trees.ipynb
+++ b/trees.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {
         "id": "DIsE6ermjF45"
       },
@@ -46,20 +46,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kHEXmT02jKEi",
-        "outputId": "13f48e54-5f3b-4c4a-930e-47158166ad89"
+        "outputId": "9c8b1f99-fd11-4571-a1f8-8281dd663749"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
+            "Mounted at /content/drive/\n"
           ]
         }
       ],
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 4,
       "metadata": {
         "id": "P1hnTgRPjF48"
       },
@@ -93,14 +93,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
         },
         "id": "u08tSgCSjF4-",
-        "outputId": "ad2daff8-9041-49c8-b439-7b7ffb502a80"
+        "outputId": "05e7b68b-88dc-4f32-ab0e-87f478ce2ba9"
       },
       "outputs": [
         {
@@ -160,7 +160,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-63cd92fd-86e3-4ad8-ac25-86d2a1a59b4c\">\n",
+              "  <div id=\"df-862a56e4-47ce-400c-b99a-9e781b6c8f9d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -328,7 +328,7 @@
               "</table>\n",
               "<p>5 rows × 64 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-63cd92fd-86e3-4ad8-ac25-86d2a1a59b4c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-862a56e4-47ce-400c-b99a-9e781b6c8f9d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -379,12 +379,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-63cd92fd-86e3-4ad8-ac25-86d2a1a59b4c button.colab-df-convert');\n",
+              "          document.querySelector('#df-862a56e4-47ce-400c-b99a-9e781b6c8f9d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-63cd92fd-86e3-4ad8-ac25-86d2a1a59b4c');\n",
+              "          const element = document.querySelector('#df-862a56e4-47ce-400c-b99a-9e781b6c8f9d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -407,7 +407,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 5
         }
       ],
       "source": [
@@ -416,13 +416,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5NGndehkjF4_",
-        "outputId": "91353244-fba8-41dc-c033-140b6ca0987a"
+        "outputId": "708a9308-9e63-4aef-b7ee-d9815956e3eb"
       },
       "outputs": [
         {
@@ -457,9 +457,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JtSl-esEZ4pd",
-        "outputId": "abf011f0-06e2-4a6c-a59a-a23502c6ee9c"
+        "outputId": "fccb3a3b-f836-402b-ed1e-5aa20743a44a"
       },
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 8,
       "metadata": {
         "id": "EqxsdrTDjF5H"
       },
@@ -2969,7 +2969,7 @@
       "metadata": {
         "id": "_XnLpDU8S3ht"
       },
-      "execution_count": 20,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -2983,29 +2983,38 @@
         "    'et__min_impurity_decrease': uniform(0, 0.1)\n",
         "}\n",
         "\n",
-        "clf = RandomizedSearchCV(pipe, distr, n_iter=40, cv=5, scoring='roc_auc',\n",
-        "                         random_state=42, verbose=2)\n",
+        "clf = RandomizedSearchCV(pipe, distr, n_iter=20, cv=5, scoring='roc_auc',\n",
+        "                         random_state=42, verbose=0)\n",
         "\n",
-        "clf.fit(X_train_dummies, y_train)\n",
-        "\n",
-        "print('Best score: ', grid.best_score_)\n",
-        "print('Best params: ', grid.best_params_)"
+        "clf.fit(X_train_dummies, y_train)"
       ],
       "metadata": {
-        "id": "fJBHBIU5Toy9",
+        "id": "fJBHBIU5Toy9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Best score: ', clf.best_score_)\n",
+        "print('Best params: ', clf.best_params_)"
+      ],
+      "metadata": {
+        "id": "SZHwHfOcWrNQ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0358fb5e-37b9-47e9-a8d7-b1cb95cc7c89"
+        "outputId": "be31a749-26a5-4d27-8521-14915814b502"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 40 candidates, totalling 200 fits\n",
-            "[CV] END et__max_depth=7, et__max_features=29, et__min_impurity_decrease=0.01834347898661638, et__min_samples_leaf=8, et__n_estimators=710; total time=  36.6s\n"
+            "Best score:  0.5\n",
+            "Best params:  {'et__max_depth': 7, 'et__max_features': 29, 'et__min_impurity_decrease': 0.01834347898661638, 'et__min_samples_leaf': 8, 'et__n_estimators': 710}\n"
           ]
         }
       ]
@@ -3016,7 +3025,7 @@
         ""
       ],
       "metadata": {
-        "id": "SZHwHfOcWrNQ"
+        "id": "xLINeUtTpwuf"
       },
       "execution_count": null,
       "outputs": []
