--- a/trees.ipynb
+++ b/trees.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "DIsE6ermjF45"
       },
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "P1hnTgRPjF48"
       },
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -416,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -459,7 +459,7 @@
         "id": "JtSl-esEZ4pd",
         "outputId": "fccb3a3b-f836-402b-ed1e-5aa20743a44a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "EqxsdrTDjF5H"
       },
@@ -2912,7 +2912,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Baseline ExtraTrees model"
+        "# Baseline ExtraTrees model <br>\n",
+        "ExtraTrees models offer more randomness and may show better results in case of overfitting of other models. Overfitting does not occur in our case, but it's still worth trying to find a better model"
       ],
       "metadata": {
         "id": "tL0LijFsSXpg"
@@ -2934,7 +2935,7 @@
         "id": "xSVgLIxUSKdG",
         "outputId": "c00a12ca-5f05-40f2-e56b-1799363d65c7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2969,7 +2970,7 @@
       "metadata": {
         "id": "_XnLpDU8S3ht"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3007,7 +3008,7 @@
         },
         "outputId": "be31a749-26a5-4d27-8521-14915814b502"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3020,15 +3021,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "For all combinations of parameters values an extra-trees model shows AUC=0.5. It means, that for all obervations a model predicts negative category. Such models are not very useful in comparison with models with higher AUC  (e.g. AdaBoost models)"
       ],
       "metadata": {
-        "id": "xLINeUtTpwuf"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "KSipIzw2g0ue"
+      }
     }
   ],
   "metadata": {
