--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -626,7 +626,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "metadata": {
         "id": "Ln4EugChYzeR"
       },
@@ -1031,12 +1031,81 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "In result of the first round of grid search, the following parameters values were selected:\n",
+        "* learning_rate = 0.0253\n",
+        "* max_depth = 3\n",
+        "* reg_lambda = 1.509\n",
+        "* gamma = 0.2\n",
+        "* scale_pos_weight = 0.25\n",
+        "* colsample_bytree = 0.9\n",
+        "* subsample: 1\n",
+        "<br> <br>\n",
+        "In the second round grid search will be used to find the optimal parameters values. Since in the first round the lowest values of max_depth and gamma were selected, in second round lower max_depth and gamma values will be tested. Values of learning_rate and reg_lambda will be set close to the values recieved in the first round."
+      ],
+      "metadata": {
+        "id": "7UQjz_FD9wiV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Round 2"
+      ],
+      "metadata": {
+        "id": "5zu4Ji5a9vFQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grid = {\n",
+        "    'learning_rate': [0.01, 0.02, 0.025, 0.03, 0.04],\n",
+        "    'gamma': [0.2, 0.5, 1],\n",
+        "    'max_depth': [6, 5, 4, 3, 2],\n",
+        "    'reg_lambda': [1.4, 1.5, 1.6],\n",
+        "    'scale_pos_weight': [0.25],\n",
+        "    'subsample': [1],\n",
+        "    'colsample_bytree': [0.9]\n",
+        "}\n",
+        "\n",
+        "clf = GridSearchCV(xgbclf, grid, cv=5, scoring='roc_auc',\n",
+        "                   verbose=1)\n",
+        "\n",
+        "clf.fit(X_train_dummies, y_train)\n",
+        "\n",
+        "print('Best score: ', clf.best_score_)\n",
+        "print('Best params: ', clf.best_params_)"
+      ],
+      "metadata": {
+        "id": "MoGr-CBfbVuD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5caab921-bf49-495c-e1b8-c4b2a4375441"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fitting 5 folds for each of 225 candidates, totalling 1125 fits\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "MoGr-CBfbVuD"
+        "id": "jcbxed3Rs0vA"
       },
       "execution_count": null,
       "outputs": []
