--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -1042,7 +1042,7 @@
         "* colsample_bytree = 0.9\n",
         "* subsample: 1\n",
         "<br> <br>\n",
-        "In the second round grid search will be used to find the optimal parameters values. Since in the first round the lowest values of max_depth and gamma were selected, in second round lower max_depth and gamma values will be tested. Values of learning_rate and reg_lambda will be set close to the values recieved in the first round."
+        "In the second round grid search will be used to find the optimal parameters values. Since in the first round the lowest value of max_depth was selected, in second round lower max_depth will be tested. Values of learning_rate and reg_lambda will be set close to the values recieved in the first round."
       ],
       "metadata": {
         "id": "7UQjz_FD9wiV"
@@ -1085,16 +1085,55 @@
         },
         "outputId": "5caab921-bf49-495c-e1b8-c4b2a4375441"
       },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 5 folds for each of 225 candidates, totalling 1125 fits\n",
+            "Best score:  0.5816683092783697\n",
+            "Best params:  {'colsample_bytree': 0.9, 'gamma': 0.2, 'learning_rate': 0.01, 'max_depth': 2, 'reg_lambda': 1.5, 'scale_pos_weight': 0.25, 'subsample': 1}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grid = {\n",
+        "    'n_estimators': [1000],\n",
+        "    'learning_rate': [0.01, 0.001, 0.0001, 1e-5, 1e-6],\n",
+        "    'gamma': [0.2, 0.3, 0.4],\n",
+        "    'max_depth': [2, 1],\n",
+        "    'reg_lambda': [1.5],\n",
+        "    'scale_pos_weight': [0.25],\n",
+        "    'subsample': [1],\n",
+        "    'colsample_bytree': [0.9]\n",
+        "}\n",
+        "\n",
+        "clf = GridSearchCV(xgbclf, grid, cv=5, scoring='roc_auc',\n",
+        "                   verbose=1)\n",
+        "\n",
+        "clf.fit(X_train_dummies, y_train)\n",
+        "\n",
+        "print('Best score: ', clf.best_score_)\n",
+        "print('Best params: ', clf.best_params_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jcbxed3Rs0vA",
+        "outputId": "91e0b5a6-c6ca-4646-eedc-9db6784e7b09"
+      },
       "execution_count": null,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 225 candidates, totalling 1125 fits\n"
+            "Fitting 5 folds for each of 30 candidates, totalling 150 fits\n"
           ]
         }
       ]
@@ -1105,7 +1144,7 @@
         ""
       ],
       "metadata": {
-        "id": "jcbxed3Rs0vA"
+        "id": "JKMUrOSDA3xc"
       },
       "execution_count": null,
       "outputs": []
