--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -1099,6 +1099,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "In result of the second round of grid search reg_lambda=1.5, gamma=0.2, max_depth=2, learning_rate=0.01 were selected. <br>\n",
+        "So trees depth should be set to 2 or 1 (max_depth=1 was not tested during first 3 rounds). the optimal value for reg_lambda is 1.5. The optimal value of gamma is between 0.2 and 0.4. Taking that into account the 4th round of grid search will be performed."
+      ],
+      "metadata": {
+        "id": "pCnnW5IYBTnz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Round 4"
+      ],
+      "metadata": {
+        "id": "wwwJCP1ACO5g"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "grid = {\n",
