--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -1146,13 +1146,107 @@
         "id": "jcbxed3Rs0vA",
         "outputId": "91e0b5a6-c6ca-4646-eedc-9db6784e7b09"
       },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 5 folds for each of 30 candidates, totalling 150 fits\n",
+            "Best score:  0.5837430724489516\n",
+            "Best params:  {'colsample_bytree': 0.9, 'gamma': 0.2, 'learning_rate': 0.01, 'max_depth': 1, 'n_estimators': 1000, 'reg_lambda': 1.5, 'scale_pos_weight': 0.25, 'subsample': 1}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The 4th round of grid search shows, that the optimal value for gamma is 0.2. In the 5th round combinations of different number of estimators and learning rates will be tested"
+      ],
+      "metadata": {
+        "id": "7KVbx7UuDPQQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Round 5"
+      ],
+      "metadata": {
+        "id": "xihXpPaDD33K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grid = {\n",
+        "    'n_estimators': [5000, 4000, 3000, 2000, 1000],\n",
+        "    'learning_rate': [0.01, 0.001, 0.0001, 1e-5, 1e-6],\n",
+        "    'gamma': [0.2],\n",
+        "    'max_depth': [2, 1],\n",
+        "    'reg_lambda': [1.5],\n",
+        "    'scale_pos_weight': [0.25],\n",
+        "    'subsample': [1],\n",
+        "    'colsample_bytree': [0.9]\n",
+        "}\n",
+        "\n",
+        "clf = GridSearchCV(xgbclf, grid, cv=5, scoring='roc_auc',\n",
+        "                   verbose=2)\n",
+        "\n",
+        "clf.fit(X_train_dummies, y_train)\n",
+        "\n",
+        "print('Best score: ', clf.best_score_)\n",
+        "print('Best params: ', clf.best_params_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JKMUrOSDA3xc",
+        "outputId": "af32e28c-9346-4a21-c334-0568a1146e66"
+      },
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 30 candidates, totalling 150 fits\n"
+            "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  17.1s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  16.7s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  16.3s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  16.2s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  16.4s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  13.3s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  13.4s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  13.0s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  13.0s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  13.1s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=3000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  10.4s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=3000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   9.9s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=3000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   9.7s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=3000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  11.3s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=3000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   9.9s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=2000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   6.6s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=2000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   6.6s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=2000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   6.5s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=2000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   6.5s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=2000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   6.6s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=1000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   3.4s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=1000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   3.4s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=1000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   3.3s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=1000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   3.3s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=1000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   3.4s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  15.7s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  15.6s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  15.4s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  15.4s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  15.6s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  12.5s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  12.5s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  12.3s\n",
+            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  12.3s\n"
           ]
         }
       ]
@@ -1163,7 +1257,7 @@
         ""
       ],
       "metadata": {
-        "id": "JKMUrOSDA3xc"
+        "id": "65oSU37aDHQu"
       },
       "execution_count": null,
       "outputs": []
