--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -1192,7 +1192,7 @@
         "}\n",
         "\n",
         "clf = GridSearchCV(xgbclf, grid, cv=5, scoring='roc_auc',\n",
-        "                   verbose=2)\n",
+        "                   verbose=1)\n",
         "\n",
         "clf.fit(X_train_dummies, y_train)\n",
         "\n",
@@ -1204,7 +1204,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JKMUrOSDA3xc",
-        "outputId": "af32e28c-9346-4a21-c334-0568a1146e66"
+        "outputId": "eab5fb1f-ce84-421c-e800-66136d95847a"
       },
       "execution_count": null,
       "outputs": [
@@ -1212,41 +1212,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  17.1s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  16.7s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  16.3s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  16.2s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  16.4s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  13.3s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  13.4s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  13.0s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  13.0s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  13.1s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=3000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  10.4s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=3000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   9.9s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=3000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   9.7s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=3000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  11.3s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=3000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   9.9s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=2000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   6.6s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=2000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   6.6s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=2000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   6.5s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=2000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   6.5s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=2000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   6.6s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=1000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   3.4s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=1000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   3.4s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=1000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   3.3s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=1000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   3.3s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=2, n_estimators=1000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=   3.4s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  15.7s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  15.6s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  15.4s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  15.4s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=5000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  15.6s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  12.5s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  12.5s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  12.3s\n",
-            "[CV] END colsample_bytree=0.9, gamma=0.2, learning_rate=0.01, max_depth=1, n_estimators=4000, reg_lambda=1.5, scale_pos_weight=0.25, subsample=1; total time=  12.3s\n"
+            "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n"
           ]
         }
       ]
