--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -1206,13 +1206,15 @@
         "id": "JKMUrOSDA3xc",
         "outputId": "eab5fb1f-ce84-421c-e800-66136d95847a"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n"
+            "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n",
+            "Best score:  0.5852756591895497\n",
+            "Best params:  {'colsample_bytree': 0.9, 'gamma': 0.2, 'learning_rate': 0.001, 'max_depth': 1, 'n_estimators': 4000, 'reg_lambda': 1.5, 'scale_pos_weight': 0.25, 'subsample': 1}\n"
           ]
         }
       ]
