--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -1220,15 +1220,29 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "The optimal values for the XGBoost model are:\n",
+        "* n_estimators = 4000\n",
+        "* learning_rate = 0.001\n",
+        "* max_depth = 1\n",
+        "* gamma = 0.2\n",
+        "* reg_lambda = 1.5\n",
+        "* colsample_bytree = 0.9\n",
+        "* subsample = 1 <br>"
       ],
       "metadata": {
-        "id": "65oSU37aDHQu"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "FwudOK8JP7NF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "With these parameters values, average AUC=0.5852757 was achieved."
+      ],
+      "metadata": {
+        "id": "wVut0-stRogc"
+      }
     }
   ],
   "metadata": {
